...
    <View
        android:id="@+id/view_overlap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_QR_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fab_upload_qr_code"
        android:src="@android:drawable/ic_input_add"
        app:fabCustomSize="48dp" />

...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fab_create_new"
        android:textColor="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_create_QR_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/fab_create_new"
        android:src="@android:drawable/ic_menu_edit"
        app:fabCustomSize="48dp" />
...
