...
        android:layout_marginEnd="8dp"
        android:hint="@string/text_url"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageview_QR_code">

        <EditText
            android:id="@+id/edittext_input_URL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/hint_input_URL"
            android:inputType="textUri"
            android:labelFor="@+id/edittext_input_URL"
            app:layout_constraintStart_toStartOf="parent"
...
        android:layout_marginEnd="8dp"
        android:hint="@string/text_tag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/URLField">

        <EditText
            android:id="@+id/edittext_input_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/text_tag"
            android:inputType="text"
            android:labelFor="@+id/edittext_input_tag"
            app:layout_constraintStart_toStartOf="parent"
...
