<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_submit"
        android:icon="@drawable/ic_check_light_blue_24"
        android:title="@string/menu_submit"
        app:showAsAction="always" />
</menu>